Import theme changes

--- a/public/index.html
+++ b/public/index.html
@@ -87,7 +87,7 @@ body {
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a class="page-scroll" href=https://github.com/tonofshell>Github</a>
+                    <a class="page-scroll" href=https://github.com/tonofshell>GitHub</a>
                 </li>
                 <li>
                     <a class="page-scroll" href=http://linkedin.com/in/tonofshell>LinkedIn</a>
